# code_snippets

./: .gitignore  CMakeLists.txt  Component_Pattern.cpp  CopyAndSwap.cpp  Dirty_Flag_Pattern.cpp  Double_Buffer_advanced_Pattern.cpp  Double_Buffer_classic_Pattern.cpp  Event_Queue_Pattern.cpp  Interpreter_Pattern.cpp  LICENSE  MutexLock.cpp  NVIidiom.cpp  Object_Pool_Pattern.cpp  Prototype_Pattern.cpp  Service_Locator_Pattern.cpp  SingeltonClass.cpp  StrategyPatternClassic.cpp  StrategyPatternThroughFunctionPointers.cpp  TraitsUsing.cpp  Type_Object_Pattern.cpp  Uncopyable.cpp  ViewHiddenUsingDeclarations.cpp  code_snippets.pro  config.h.in  constness.cpp  operatorNew.cpp  operatorOutOfClass.cpp  set_new_handler_usage.cpp  shared_ptr.cpp  swapVariants.cpp
qt_threading/: main.cpp  qt_threading.pro  reusable_thread.cpp  timed_thread.cpp  timed_thread.h  worker.cpp
qt_threading/qt_threading/: main.cpp  qt_threading.pro  reusable_thread.h  worker.h
simple_alogorithms/: main.cpp  simple_alogorithms.pro  three_int_hash.cpp  three_int_hash.hpp  uuid_generator.cpp  uuid_generator.hpp
unsorted/: Bytecode_Pattern.cpp  CRT_Pattern.cpp  Command_Pattern.cpp  Flyweight_Pattern.cpp  Game_Loop_Pattern.cpp  ImplementationOfTraits.cpp  State_Pattern(FSM).cpp  StrategyPatternThroughTR1_function.cpp  Subclass_Sandbox_Pattern.cpp  Update_Method_Pattern.cpp  ViewHiddenUsingForwardingFunctions.cpp  Virtualisation.cpp  shared_ptr_reset.cpp  unsorted.pro
user_interaction/: main.cpp
